--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
-    "react-number-format": "^5.4.1"
+    "react-number-format": "^5.4.1",
+    "sass": "^1.77.8"
   },
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
