--- a/package.json
+++ b/package.json
@@ -13,12 +13,18 @@
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^5.16.4",
     "@mui/material": "^5.16.4",
+    "@tanstack/react-table": "^8.20.5",
+    "@tippyjs/react": "^4.2.6",
     "clsx": "^2.1.1",
+    "i": "^0.3.7",
     "next": "14.2.5",
+    "npm": "^10.8.3",
     "react": "^18",
     "react-dom": "^18",
     "react-number-format": "^5.4.1",
-    "sass": "^1.77.8"
+    "react-toastify": "^10.0.5",
+    "sass": "^1.77.8",
+    "usehooks-ts": "^3.1.0"
   },
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
