--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-number-format": "^5.4.1",
     "react-toastify": "^10.0.5",
     "sass": "^1.77.8",
+    "swiper": "^11.1.14",
     "usehooks-ts": "^3.1.0"
   },
   "devDependencies": {
