--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-number-format": "^5.4.1",
+    "react-select": "^5.8.1",
     "react-toastify": "^10.0.5",
     "sass": "^1.77.8",
     "swiper": "^11.1.14",
